# HSE_MC_ML_Project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  demo.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
demo/: demo.py
model/: dbface.mapping  dbface.xml
src/: common.py  demo.py
src/common/: __init__.py
src/demo/: demo.py
tests/: test_detect_faces.py
