[tool.poetry]
name = "demo"
version = "0.1.0"
description = "Machine Learning in CV course"
authors = ["Evgeniy Zaborshchikov"]
license = "free"
readme = "README.md"
packages = [
    { include = "src" }
]
include = [
    { path = "model", format = ["sdist", "wheel"] },
    { path = "data", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "4.9.0.80"
torch = "2.2.1"
openvino = "2023.3.0"

[tool.poetry.scripts]
demo = "src.demo.demo:run_demo"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
