[tool.poetry]
name = "demo"
version = "0.1.0"
description = "Machine Learning in CV course"
authors = ["Evgeniy Zaborshchikov"]
license = "free"
readme = "README.md"
packages = [
    { include = "src" }
]
include = [
    { path = "model", format = ["sdist", "wheel"] },
    { path = "data", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "4.9.0.80"
torch = "2.2.1"
openvino = "2023.3.0"

[tool.poetry.scripts]
demo = "src.demo.demo:run_demo"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
